java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting11/ShebangInJavaFile.java
<error descr="Shebang mechanism in .java files is not permitted">#!</error>/path/to/java

class Main {
}
